@@ -1,6 +1,7 @@
 49
 ================
 
+18/09/24 FindPet: tweaks based on API responses #1500
 18/09/24 Add locale for Saudi Arabia
 16/09/24 Publish options: exclude under should only allow integer weeks
 16/09/24 ASK/VAR SITE missing from manual, and did not output as criteria
